# spotify-organizer

./: pyproject.toml
spotify_organizer/: __main__.py  auth.py  display.py  spotify_types.py  track_utils.py
